RESOLVED FIXED28739
[V8] setTimeout does not convert non-string argument to string
https://bugs.webkit.org/show_bug.cgi?id=28739
Summary [V8] setTimeout does not convert non-string argument to string
Mads Ager
Reported 2009-08-26 07:45:13 PDT
LayoutTests/fast/dom/Window/setTimeout-string-argument.html fails with V8 because we do not convert a non-string argument to a string. Patch on its way.
Attachments
Convert setTimeout argument to string if non-string (2.65 KB, patch)
2009-08-26 07:53 PDT, Mads Ager
no flags
Mads Ager
Comment 1 2009-08-26 07:53:05 PDT
Created attachment 38613 [details] Convert setTimeout argument to string if non-string
Dimitri Glazkov (Google)
Comment 2 2009-08-26 08:03:10 PDT
Comment on attachment 38613 [details] Convert setTimeout argument to string if non-string r=me.
Eric Seidel (no email)
Comment 3 2009-08-26 11:11:20 PDT
Comment on attachment 38613 [details] Convert setTimeout argument to string if non-string Rejecting patch 38613 from commit-queue. This patch will require manual commit. ['WebKitTools/Scripts/run-webkit-tests', '--no-launch-safari', '--quiet', '--exit-after-n-failures=1'] failed with exit code 1
Eric Seidel (no email)
Comment 4 2009-08-26 12:32:03 PDT
Comment on attachment 38613 [details] Convert setTimeout argument to string if non-string accessibility/nochildren-elements.html -> crashed Seems unrelated.
Eric Seidel (no email)
Comment 5 2009-08-26 12:55:22 PDT
Comment on attachment 38613 [details] Convert setTimeout argument to string if non-string Clearing flags on attachment: 38613 Committed r47786: <http://trac.webkit.org/changeset/47786>
Eric Seidel (no email)
Comment 6 2009-08-26 12:55:26 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.