2009-08-26  Mads Ager  <ager@chromium.org>

Reviewed by Dimitri Glazkov.

        [V8] setTimeout does not convert non-string argument to string
        https://bugs.webkit.org/show_bug.cgi?id=28739

        Convert non-string argument to setTimeout to string in the V8
        bindings.

        * bindings/v8/custom/V8DOMWindowCustom.cpp:
        (WebCore::V8Custom::WindowSetTimeoutImpl):


Canonical link: https://commits.webkit.org/39362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47786 268f45cc-cd09-0410-ab3c-d52691b4dbfc